--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,4 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.database=oracle
 
 spring.thymeleaf.enable-spring-el-compiler=true
+spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
